Feat: membuat car details page dan CarDetailsNavigator component

--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    
-    <script src="https://kit.fontawesome.com/d674aa5530.js" crossorigin="anonymous"></script>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/vite.svg" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>Vite + React</title>
+	</head>
+	<body>
+		<div id="root"></div>
+
+		<!-- #region Fontawesome's module -->
+		<script src="https://kit.fontawesome.com/d674aa5530.js" crossorigin="anonymous"></script>
+		<!-- #endregion Fontawesome's module -->
+
+		<!-- #region Google font's module -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
+		<!-- #endregion Google font's module -->
+
+		<!-- #region React module -->
+		<script type="module" src="/src/main.jsx"></script>
+		<!-- #endregion React module -->
+	</body>
 </html>
